--- a/pom.xml
+++ b/pom.xml
@@ -55,16 +55,12 @@ SOFTWARE.
     <dependency>
       <groupId>com.artipie</groupId>
       <artifactId>http</artifactId>
-      <version>0.16.1</version>
+      <version>v1.1.3</version>
     </dependency>
     <dependency>
       <groupId>org.eclipse.jetty</groupId>
       <artifactId>jetty-reactive-httpclient</artifactId>
       <version>1.1.10</version>
-    </dependency>
-    <dependency>
-      <groupId>com.artipie</groupId>
-      <artifactId>asto</artifactId>
     </dependency>
     <dependency>
       <groupId>javax.json</groupId>
@@ -75,6 +71,11 @@ SOFTWARE.
       <artifactId>javax.json</artifactId>
     </dependency>
     <!-- Test only dependencies -->
+    <dependency>
+      <groupId>org.cactoos</groupId>
+      <artifactId>cactoos</artifactId>
+      <scope>test</scope>
+    </dependency>
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest</artifactId>
