--- a/.github/workflows/update-copyright-years.yml
+++ b/.github/workflows/update-copyright-years.yml
@@ -1,8 +1,8 @@
-name: Update copyright year in license file and license header of all files
+name: Update copyright year
 
 #on:
 #  schedule:
-#    - cron: "0 3 1 1 *"
+#  - cron: '0 1 22 * *'
 
 on: workflow_dispatch
 
@@ -16,6 +16,8 @@ jobs:
       - uses: FantasticFiasco/action-update-license-year@v2
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
+          path: LICENSE*
+          commitTitle: "chore: update year in license file"
 
   source:
     needs: license
@@ -28,3 +30,4 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           path: src/**/*.java
+          commitTitle: "chore: update year in license header"
