chore: add GitHub action for update license year
add GitHub action which check for current year and make PR for update year in LICENCE file and in license header at 01:00 UTC on the 22nd of every month

--- a/.github/workflows/update-copyright-years.yml
+++ b/.github/workflows/update-copyright-years.yml
@@ -1,10 +1,8 @@
 name: Update copyright year
 
-#on:
-#  schedule:
-#  - cron: '0 1 22 * *'
-
-on: workflow_dispatch
+on:
+  schedule:
+  - cron: '0 1 22 * *'
 
 jobs:
   license:
@@ -17,7 +15,7 @@ jobs:
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           path: LICENSE*
-          commitTitle: "chore: update year in license file"
+          commitTitle: "chore: update year in LICENSE file"
 
   source:
     needs: license
