--- a/.github/workflows/update-copyright-years.yml
+++ b/.github/workflows/update-copyright-years.yml
@@ -13,7 +13,7 @@ jobs:
           fetch-depth: 0
       - uses: FantasticFiasco/action-update-license-year@v2
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.LICENSE_SECRET }}
           path: | #add new path with glob pattern https://www.npmjs.com/package/glob
             **/LICENSE*
             src/**/*.java
